# Gocator

./: .gitignore  AGENTS.md  CMakeLists.txt  LOG.md  README.md
C++/: CMakeLists.txt  Gocator.cpp  Gocator.h  GocatorTypes.h
C++/Internal/: GocatorAcquisition.cpp  GocatorAcquisition.h  GocatorConnection.cpp  GocatorConnection.h  GocatorDiscovery.cpp  GocatorDiscovery.h  GocatorParameterSet.cpp  GocatorParameterSet.h  GocatorResourceClient.cpp  GocatorResourceClient.h  GocatorSdkRuntime.cpp  GocatorSdkRuntime.h  GocatorSettingsManager.cpp  GocatorSettingsManager.h
C++/Utility/GraphicsEngine/: GocatorDataSetScene3DAdapter.cpp  GocatorDataSetScene3DAdapter.h
C++/Utility/Qt/: QGocatorWidget.cpp  QGocatorWidget.h
docs/: API_QT_SPLIT_CHECKLIST.md
src/: cli_main.cpp  main.cpp  ui_main.cpp
src/gocator/: Gocator.cpp  GocatorAcquisition.cpp  GocatorAcquisition.h  GocatorConnection.cpp  GocatorConnection.h  GocatorDiscovery.cpp  GocatorDiscovery.h  GocatorParameterSet.cpp  GocatorResourceClient.cpp  GocatorResourceClient.h  GocatorSdkRuntime.cpp  GocatorSettingsManager.cpp  GocatorSettingsManager.h  QGocatorWidget.cpp
src/ui/: main.cpp
